<resources>
    <string name="app_name">CercaTrova V2</string>
    <string name="purge">Borrar localizaciones</string>
    <string name="action_settings">Opciones</string>
    <string name="titleServiceStart">Arrancar servicio</string>
    <string name="titleServiceStop">Parar servicio</string>
    <string name="intervaloActualizacion">Intervalo de actualización en segundos</string>
    <string name="titleIntervaloActualizacion">Intervalo de actualización</string>
    <string name="aplicationColor">Color de los items</string>
    <string name="pincoche">Tipo de pin para localizacion del coche</string>
    <string name="pinactual">Tipo de pin para localizacion actual</string>
    <string name="estilomapa">Estilo del mapa</string>

    <string name="color_item_negro">Negro</string>
    <string name="color_item_rojo">Rojo</string>
    <string name="color_item_azul">Azul</string>
    <string name="color_item_amarillo">Amarillo</string>
    <string name="color_item_verde">Verde</string>
    <string name="color_item_gris">Gris</string>
    <string name="color_item_morado">Morado</string>
    <string name="inicio1">Buscando posición GPS</string>
    <string name="inicio2">Podría demorarse un poco</string>
    <string name="encontrada">Se ha encontrado la ubicación</string>
    <string name="delete">filas de la base de datos borradas</string>
    <string name="zeroguardadas">No hay posiciones guardadas</string>
    <string name="selectdelete">¡Posición borrada!</string>
    <string name="falloguardar">¡No se ha podido guardar la ubicación!</string>
    <string name="bienguardar">¡Ubicación guardada!</string>
    <string name="update_localizacion">Actualizar</string>

    <string name="title_activity_maps_carga">Map</string>
    <string name="title_activity_maps_guardar">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardarPos">Guardar Posición</string>
    <string name="verubic">Ver Ubicaciones</string>
    <string name="introduznombre">Introduzca un nombre</string>
    <string name="lat">Latitud: </string>
    <string name="longit">Longitud: </string>
    <string name="edit">Nuevo nombre</string>
    <string name="botedit">Editar</string>
    <string name="menuedit">Editar Nombre</string>
    <string name="menuborrar">Borrar Posición</string>
</resources>
