<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:summary="@string/intervaloActualizacion"
        android:title="@string/titleIntervaloActualizacion"
        android:inputType="number"
        android:key="update_interval" />

<ListPreference
    android:key="aplication_color"
    android:title="@string/aplicationColor"
    android:summary=""
    android:entries="@array/color_items"
    android:entryValues="@array/color_values"/>

    <ListPreference
        android:key="aplication_item_coche"
        android:title="@string/pincoche"
        android:summary=""
        android:entries="@array/coche_items"
        android:entryValues="@array/coche_values"/>

    <ListPreference
        android:key="aplication_item_actual"
        android:title="@string/pinactual"
        android:summary=""
        android:entries="@array/actual_items"
        android:entryValues="@array/actual_values"/>

    <ListPreference
        android:key="aplication_tipo_mapa"
        android:title="Estilo del mapa"
        android:summary=""
        android:entries="@array/mapa_items"
        android:entryValues="@array/mapa_values"/>

</PreferenceScreen>